
[TestRequireAsyncQueue/invalid-0 - 1]
Diagnostic 1: missingOption (7:15 - 7:53)
Message: A class extending ADisposable must accept 'asyncQueue: AsyncQueue' in its constructor options and hand it to super(): an app owns one queue and hands it to everything it builds.
Help: Add 'readonly asyncQueue: AsyncQueue;' to the constructor's options object and pass it to super({ asyncQueue }).
   6 | class Service extends ADisposable {
   7 |   constructor({ logger }: { readonly logger: Logger }) {
     |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   8 |     super();
---

[TestRequireAsyncQueue/invalid-1 - 1]
Diagnostic 1: missingOption (7:15 - 7:50)
Message: A class extending ADisposable must accept 'asyncQueue: AsyncQueue' in its constructor options and hand it to super(): an app owns one queue and hands it to everything it builds.
Help: Add 'readonly asyncQueue: AsyncQueue;' to the constructor's options object and pass it to super({ asyncQueue }).
   6 | class Service extends ADisposable {
   7 |   constructor(options: { readonly logger: Logger }) {
     |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   8 |     super();
---

[TestRequireAsyncQueue/invalid-2 - 1]
Diagnostic 1: missingOption (7:3 - 9:3)
Message: A class extending ADisposable must accept 'asyncQueue: AsyncQueue' in its constructor options and hand it to super(): an app owns one queue and hands it to everything it builds.
Help: Add 'readonly asyncQueue: AsyncQueue;' to the constructor's options object and pass it to super({ asyncQueue }).
   6 | class Service extends ADisposable {
   7 |   constructor() {
     |   ~~~~~~~~~~~~~~~
   8 |     super();
     | ~~~~~~~~~~~~
   9 |   }
     | ~~~
  10 | }
---

[TestRequireAsyncQueue/invalid-3 - 1]
Diagnostic 1: missingOption (7:15 - 7:20)
Message: A class extending ADisposable must accept 'asyncQueue: AsyncQueue' in its constructor options and hand it to super(): an app owns one queue and hands it to everything it builds.
Help: Add 'readonly asyncQueue: AsyncQueue;' to the constructor's options object and pass it to super({ asyncQueue }).
   6 | class Service extends ADisposable {
   7 |   constructor({}: {}) {
     |               ~~~~~~
   8 |     super();
---

[TestRequireAsyncQueue/invalid-4 - 1]
Diagnostic 1: missingOption (7:15 - 7:53)
Message: A class extending ADisposable must accept 'asyncQueue: AsyncQueue' in its constructor options and hand it to super(): an app owns one queue and hands it to everything it builds.
Help: Add 'readonly asyncQueue: AsyncQueue;' to the constructor's options object and pass it to super({ asyncQueue }).
   6 | class Service extends ADisposable {
   7 |   constructor({ logger }: { readonly logger: Logger }) {}
     |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   8 | }
---

[TestRequireAsyncQueue/invalid-5 - 1]
Diagnostic 1: missingOption (10:15 - 10:37)
Message: A class extending ADisposable must accept 'asyncQueue: AsyncQueue' in its constructor options and hand it to super(): an app owns one queue and hands it to everything it builds.
Help: Add 'readonly asyncQueue: AsyncQueue;' to the constructor's options object and pass it to super({ asyncQueue }).
   9 | class Service extends ADisposable {
  10 |   constructor(options: ServiceOptions) {
     |               ~~~~~~~~~~~~~~~~~~~~~~~
  11 |     super();
---

[TestRequireAsyncQueue/invalid-6 - 1]
Diagnostic 1: missingOption (7:15 - 7:53)
Message: A class extending ADisposable must accept 'asyncQueue: AsyncQueue' in its constructor options and hand it to super(): an app owns one queue and hands it to everything it builds.
Help: Add 'readonly asyncQueue: AsyncQueue;' to the constructor's options object and pass it to super({ asyncQueue }).
   6 | const Service = class extends ADisposable {
   7 |   constructor({ logger }: { readonly logger: Logger }) {
     |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   8 |     super();
---

[TestRequireAsyncQueue/invalid-7 - 1]
Diagnostic 1: missingOption (11:15 - 11:53)
Message: A class extending ADisposable must accept 'asyncQueue: AsyncQueue' in its constructor options and hand it to super(): an app owns one queue and hands it to everything it builds.
Help: Add 'readonly asyncQueue: AsyncQueue;' to the constructor's options object and pass it to super({ asyncQueue }).
  10 | class Service extends Middle {
  11 |   constructor({ logger }: { readonly logger: Logger }) {
     |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  12 |     super({ asyncQueue: null as unknown as AsyncQueue });
---

[TestRequireAsyncQueue/invalid-8 - 1]
Diagnostic 1: missingOption (6:15 - 6:53)
Message: A class extending ADisposable must accept 'asyncQueue: AsyncQueue' in its constructor options and hand it to super(): an app owns one queue and hands it to everything it builds.
Help: Add 'readonly asyncQueue: AsyncQueue;' to the constructor's options object and pass it to super({ asyncQueue }).
   5 | class Service extends ADisposable {
   6 |   constructor({ logger }: { readonly logger: Logger }) {
     |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   7 |     super();
---

[TestRequireAsyncQueue/invalid-9 - 1]
Diagnostic 1: missingOption (6:15 - 6:53)
Message: A class extending ADisposable must accept 'asyncQueue: AsyncQueue' in its constructor options and hand it to super(): an app owns one queue and hands it to everything it builds.
Help: Add 'readonly asyncQueue: AsyncQueue;' to the constructor's options object and pass it to super({ asyncQueue }).
   5 | class Service extends ADisposable {
   6 |   constructor({ logger }: { readonly logger: Logger }) {
     |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   7 |     super();
---
